kubernetes-runtime-security-platform/k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsecops-demo-app
  namespace: devsecops-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devsecops-demo
  template:
    metadata:
      labels:
        app: devsecops-demo
    spec:
      containers:
      - name: devsecops-demo
        image: devsecops-demo:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
          allowPrivilegeEscalation: false
