kubernetes-runtime-security-platform/k8s-manifests/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: devsecops-demo-netpol
  namespace: devsecops-demo
spec:
  podSelector:
    matchLabels:
      app: devsecops-demo
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - ports:
    - protocol: TCP
      port: 3000
